# projectSQL

./: .flake8  .gitignore  database.ini  pyproject.toml
src/: config.py  db_class.py  get_vacancy.py  utils.py
